hphp/test/zend/good/ext/gd/tests/copyresized.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!function_exists('imagecopyresized')) die("skip gd extension not available\n");
}
